# dotfiles

./: .gitignore  .mise.toml  Brewfile  Brewfile.lock.json  Brewfile.office  Brewfile.private  Makefile  README.md  base.ts  configuration.ts  dotfiles.sh  exec-dotfiles.sh  manual-settings.md  office.Brewfile  private.Brewfile  sample_rules.json  starship.toml
.claude/: settings.local.json
.config/: starship.toml
alacritty/: alacritty.toml
atuin/: config.toml
docs/: cmux-textbook.md
git/: .gitconfig
goland/: disabled_plugins.txt  idea.properties
hammerspoon/: Aclock.lua  init.lua  window-management.lua  window_restore.lua
ideavim/: .ideavimrc  memo.md
karabiner/: cheatsheet.html  karabiner.edn
karabinerTools/: PrintKeylayout.swift
macos/: defaults.sh  export.sh  power.sh  symbolichotkeys.plist
manual-settings/: manual-settings.md
raycast/: README.md  quicklinks.json  (+1 more)
vim/: vimrc
zsh/.config/: aliases-terraform.zsh  aliases.zsh  chatutil.py  chatutil.zsh  docker-aliases.zsh  functions.zsh  git-functions.zsh  icons.zsh  java-aliases.zsh  postgresql-aliases.zsh  pyproject.toml  python-aliases.zsh
zsh/.config/aliases/: aliases-cs.zsh  aliases-flutter.zsh  aliases-frontend.zsh  aliases-obsidian.zsh  aliases-python.zsh  aliases-tmux.zsh  aliases.zsh
zsh/.config/functions/: chatutil.py  create-worktree.zsh  download-cursor-rules.zsh  functions-ghq.zsh  functions-git.zsh  functions-go.zsh  functions.zsh  stash_copy.sh  update-tilt-worktree.zsh  ws.zsh.txt
zsh/.config/makefile/: firebase.mk  flutter.mk  flutterpub.mk  makefile  poetry.mk  venv.mk
(+103 files in other folders)
